# Craig

./: .env.example  CRAIG.md  Cargo.toml  Justfile  LICENSE  README.md
migrations/: 20260303143441_create_chat_logs.sql  20260303170500_add_chat_logs_status_columns.sql
src/: bot.rs  commands.rs  config.rs  db.rs  error.rs  helpers.rs  logging.rs  main.rs  services.rs
src/commands/: ai.rs  ping.rs  sync.rs
src/services/: ai.rs  chat.rs  chat_log.rs  dispatch.rs
