[package]
name = "Craig"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"
tokio = { version = "1.49.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
dotenvy = "0.15.7"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
async-openai = { version = "0.33.0", features = ["chat-completion"] }
reqwest = { version = "0.12.28", default-features = false, features = [
    "rustls-tls",
] }

[dependencies.sqlx]
version = "0.8.6"
features = ["macros", "runtime-tokio-rustls", "postgres"]

[profile.dev.package.sqlx-macros]
opt-level = 3
